# nash-dqn

./: .gitignore  README.md  agent.py  dqn.py  launch.py  launch.sh  log_analysis.ipynb  nash_dqn.py  nash_dqn_exploiter.py  pettingzoo_boxing_v2_nash_dqn.yaml  pyproject.toml  requirements.txt  solver_comparison.ipynb  test_solver.py  train.sh
common/: args_parser.py  arguments.py  utils.py  wrappers.py
confs/: pettingzoo_boxing_v2_nash_dqn_exploiter.yaml
deprecated/: bilateral_dqn.py
equilibrium_solver/: __init__.py
generate_game/: generate_game.py
model/boxing_v2_NashDQN_2022-07-25-23-11-35/: 0_model  0_target
model/boxing_v2_NashDQN_2022-07-25-23-40-41/: 0_model  0_target  2000_model  2000_target  4000_model  4000_target
model/boxing_v2_NashDQN_2022-07-26-14-48-48/: 0_model  0_target  2000_model  2000_target
model/boxing_v2_NashDQN_2022-07-26-17-24-56/: 0_model  0_target
models/nash_dqn/boxing_v1/: 0dqn  (+1 more)
runs/boxing_v1-dqn-02021-06-15-15-08-24/: events.out.tfevents.1623740904.quantumiracle-MS-7C83
runs/boxing_v1-dqn-02021-06-16-14-45-35/: events.out.tfevents.1623825935.quantumiracle-MS-7C83
runs/boxing_v1-dqn-02021-06-16-14-55-23/: events.out.tfevents.1623826523.quantumiracle-MS-7C83
runs/boxing_v1-dqn-02021-06-16-15-06-44/: events.out.tfevents.1623827204.quantumiracle-MS-7C83
runs/boxing_v1-dqn-02021-06-16-15-07-44/: events.out.tfevents.1623827264.quantumiracle-MS-7C83
runs/boxing_v1-dqn-02021-06-16-15-08-06/: events.out.tfevents.1623827286.quantumiracle-MS-7C83
wandb/: latest-run
wandb/run-20220725_225604-1abj66qz/: run-1abj66qz.wandb
(+67 files in other folders)
